infrastructure/longhorn/overlays/nishir/patch-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  parentRefs:
    - name: longhorn
      sectionName: https
  hostnames:
    - longhorn.i.shikanime.studio
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-redirect
  namespace: longhorn-system
spec:
  parentRefs:
    - name: longhorn
      sectionName: http
  hostnames:
    - longhorn.i.shikanime.studio
